[gd_scene load_steps=3 format=2]

[ext_resource path="res://ResourceFarmer.gd" type="Script" id=1]
[ext_resource path="res://resource-farmer.png" type="Texture" id=2]

[node name="ResourceFarmer" type="Area2D" groups=[
"resource_farmers",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FadingTween" type="Tween" parent="."]

[node name="GenerationTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 231.5, -74.2, 230.2, -70, 229.2, -70, 143.2, 197, -144, 197, -144, 192.6, -232.1, -77, -228, -77, -5, -239.5, -5, -240.8, -1.7, -242.5 )
[connection signal="body_entered" from="." to="." method="_on_ResourceFarmer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ResourceFarmer_body_exited"]
[connection signal="timeout" from="GenerationTimer" to="." method="_on_GenerationTimer_timeout"]
